--- a/pathAndroid/app/build.gradle
+++ b/pathAndroid/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+//compile 'com.squareup.okhttp3:okhttp:3.8.0'
 
 android {
     compileSdkVersion 26
@@ -29,5 +30,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.android.support:support-annotations:28.0.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
