--- a/pathAndroid/app/src/main/AndroidManifest.xml
+++ b/pathAndroid/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
             </intent-filter>
         </activity>
         <service
-            android:name=".FirebaseMessagingService">
+            android:name=".FirebaseMessagingService"
+            android:stopWithTask="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
