--- a/PathPractice/.classpath
+++ b/PathPractice/.classpath
@@ -35,5 +35,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/ghwnw/Desktop/gcm-server.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ghwnw/Desktop/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
